@@ -17,7 +17,7 @@
 if {[info commands package] == ""} {
     error "version mismatch: library\nscripts expect Tcl version 7.5b1 or later but the loaded version is\nonly [info patchlevel]"
 }
-package require -exact Tcl 8.5.1
+package require -exact Tcl 8.5.2b1
 
 # Compute the auto path to use in this interpreter.
 # The values on the path come from several locations:
